// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AloitusKuulutus suorita aloituskuulutuksen hyväksymisprosessin eri vaiheet onnistuneesti 1`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "kunnat": Array [
        Object {
          "id": 837,
          "sahkoposti": "837@email.com",
        },
        Object {
          "id": 536,
          "sahkoposti": "536@email.com",
        },
      ],
      "viranomaiset": Array [
        Object {
          "nimi": "PIRKANMAAN_ELY",
          "sahkoposti": "pirkanmaan-ely@email.com",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": undefined,
}
`;

exports[`AloitusKuulutus suorita aloituskuulutuksen hyväksymisprosessin eri vaiheet onnistuneesti 2`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "kunnat": Array [
        Object {
          "id": 837,
          "sahkoposti": "837@email.com",
        },
        Object {
          "id": 536,
          "sahkoposti": "536@email.com",
        },
      ],
      "viranomaiset": Array [
        Object {
          "nimi": "PIRKANMAAN_ELY",
          "sahkoposti": "pirkanmaan-ely@email.com",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus sv.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "kunnat": Array [
          Object {
            "id": 837,
            "sahkoposti": "837@email.com",
          },
          Object {
            "id": 536,
            "sahkoposti": "536@email.com",
          },
        ],
        "viranomaiset": Array [
          Object {
            "nimi": "PIRKANMAAN_ELY",
            "sahkoposti": "pirkanmaan-ely@email.com",
          },
        ],
      },
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "yhteysHenkilot": Array [
          "A000123",
          "A000124",
        ],
        "yhteysTiedot": Array [
          Object {
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "email": "Kunta.Kuntalainen@vayla.fi",
        "etunimi": "Kunta",
        "kunta": 536,
        "logo": Object {
          "RUOTSI": "/suunnittelusopimus/logo.png",
          "SUOMI": "/suunnittelusopimus/logo.png",
        },
        "puhelinnumero": "029123123",
        "sukunimi": "Kuntalainen",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusELY": "ELY/1/2022",
        "asiatunnusVayla": "VAYLA/1/2022",
        "kunnat": Array [
          837,
          536,
        ],
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Kunta",
          "kunta": 536,
          "organisaatio": "Nokia",
          "puhelinnumero": "029123123",
          "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
          "sukunimi": "Kuntalainen",
        },
        Object {
          "elyOrganisaatio": "PIRKANMAAN_ELY",
          "etunimi": "Eemil",
          "organisaatio": "ELY",
          "puhelinnumero": "123456789",
          "sahkoposti": "eemil.elylainen@ely.fi",
          "sukunimi": "Elylainen",
        },
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus suorita aloituskuulutuksen hyväksymisprosessin eri vaiheet onnistuneesti 3`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "kunnat": Array [
        Object {
          "id": 837,
          "sahkoposti": "837@email.com",
        },
        Object {
          "id": 536,
          "sahkoposti": "536@email.com",
        },
      ],
      "viranomaiset": Array [
        Object {
          "nimi": "PIRKANMAAN_ELY",
          "sahkoposti": "pirkanmaan-ely@email.com",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": "Korjaa teksti",
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [],
}
`;

exports[`AloitusKuulutus suorita aloituskuulutuksen hyväksymisprosessin eri vaiheet onnistuneesti 4`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "kunnat": Array [
        Object {
          "id": 837,
          "sahkoposti": "837@email.com",
        },
        Object {
          "id": 536,
          "sahkoposti": "536@email.com",
        },
      ],
      "viranomaiset": Array [
        Object {
          "nimi": "PIRKANMAAN_ELY",
          "sahkoposti": "pirkanmaan-ely@email.com",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus sv.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "kunnat": Array [
          Object {
            "id": 837,
            "sahkoposti": "837@email.com",
          },
          Object {
            "id": 536,
            "sahkoposti": "536@email.com",
          },
        ],
        "viranomaiset": Array [
          Object {
            "nimi": "PIRKANMAAN_ELY",
            "sahkoposti": "pirkanmaan-ely@email.com",
          },
        ],
      },
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "yhteysHenkilot": Array [
          "A000123",
          "A000124",
        ],
        "yhteysTiedot": Array [
          Object {
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "email": "Kunta.Kuntalainen@vayla.fi",
        "etunimi": "Kunta",
        "kunta": 536,
        "logo": Object {
          "RUOTSI": "/suunnittelusopimus/logo.png",
          "SUOMI": "/suunnittelusopimus/logo.png",
        },
        "puhelinnumero": "029123123",
        "sukunimi": "Kuntalainen",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusELY": "ELY/1/2022",
        "asiatunnusVayla": "VAYLA/1/2022",
        "kunnat": Array [
          837,
          536,
        ],
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Kunta",
          "kunta": 536,
          "organisaatio": "Nokia",
          "puhelinnumero": "029123123",
          "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
          "sukunimi": "Kuntalainen",
        },
        Object {
          "elyOrganisaatio": "PIRKANMAAN_ELY",
          "etunimi": "Eemil",
          "organisaatio": "ELY",
          "puhelinnumero": "123456789",
          "sahkoposti": "eemil.elylainen@ely.fi",
          "sukunimi": "Elylainen",
        },
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;
